src/objects/UnitedHealth_Premium_Designation__mdt.object
<CustomObject>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Efficiency_Code__c</fullName>
        <label>Efficiency Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Code__c</fullName>
        <label>Quality Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UnitedHealth Premium Designations</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>Efficiency_Code__c</columns>
        <columns>Quality_Code__c</columns>
        <columns>Designation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>UnitedHealth Premium Designation</pluralLabel>
</CustomObject>